[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameHUDRelated/Tooltips/TooltipBodyConstructors/TooltipBody.tscn" type="PackedScene" id=1]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Subs/Almanac_Page/Almanac_Page_CategoryPanel/Almanac_Page_Category.gd" type="Script" id=2]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://GeneralGUIRelated/AlmanacGUI/Assets/Shared/Line_CategoryBorder/Line_CategoryBorder_LightGray_6x6.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="Almanac_Page_Category" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="LeftBorder" type="TextureRect" parent="."]
margin_right = 6.0
margin_bottom = 47.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 4 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="."]
margin_left = 34.0
margin_right = 40.0
margin_bottom = 47.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 4 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 6.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 4 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="."]
margin_top = 41.0
margin_right = 40.0
margin_bottom = 47.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 4 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 47.0
mouse_filter = 2
custom_constants/margin_right = 11
custom_constants/margin_top = 11
custom_constants/margin_left = 11
custom_constants/margin_bottom = 11

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 11.0
margin_top = 11.0
margin_right = 29.0
margin_bottom = 36.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 18.0
margin_bottom = 17.0
mouse_filter = 2

[node name="HeaderLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 18.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 18.0
margin_bottom = 21.0
mouse_filter = 2

[node name="HeaderDesc" parent="MarginContainer/VBoxContainer/MarginContainer2" instance=ExtResource( 1 )]
margin_right = 18.0
default_font_color = Color( 0.866667, 0.866667, 0.866667, 1 )

[node name="ButtonMarginer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 18.0
margin_bottom = 25.0
mouse_filter = 2

[node name="ButtonContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/ButtonMarginer"]
margin_right = 18.0
mouse_filter = 2
columns = 6
